--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.5.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.15.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
